--- a/public/elements/login-element.html
+++ b/public/elements/login-element.html
@@ -8,10 +8,12 @@
 
   <template>
     <style>    
-        
+        h2{
+            color: #303F9F;
+        }
     </style>
       <div id="header"><h2>Log In</h2></div>
-    <div id="content">
+        <div id="content">
         <paper-input label="Vorname" floatingLabel></paper-input>
         <paper-input label="Nachname" floatingLabel></paper-input>
     </div>
